--- a/musicpimp/src/main/res/values/strings.xml
+++ b/musicpimp/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">MusicPimp</string>
-    <string name="app_version">1.9.8</string>
-    <string name="name_and_version">MusicPimp 1.9.8</string>
+    <string name="app_version">2.0.0</string>
+    <string name="name_and_version">MusicPimp 2.0.0</string>
 
     <string name="action_prev">Previous</string>
     <string name="action_play">Play</string>
     <string name="action_next">Next</string>
     <string name="action_downloads">Downloads</string>
     <string name="action_about">About</string>
+    <string name="action_search">Search</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_beam">MusicBeamer</string>
     <string name="action_settings">Settings</string>
@@ -204,6 +205,9 @@
     <string name="scan_requires_wifi">WiFi is not enabled. Please enable WiFi or add the endpoint manually
         instead.
     </string>
+
+    <string name="search_hint">Search songs and artists</string>
+    <string name="search_open">Open search</string>
 
     <!-- Generic messages -->
     <string name="loading">Loading…</string>
