--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="previous">Previous</string>
     <string name="play">Play</string>
     <string name="next">Next</string>
+    <string name="no_track">No track</string>
 </resources>
