--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_player">Player</string>
     <string name="title_settings">Settings</string>
+    <string name="title_add_endpoint">Add endpoint</string>
     <string name="title_edit_endpoint">Edit endpoint</string>
     <string name="add">Add</string>
     <string name="settings">Settings</string>
@@ -18,5 +19,7 @@
     <string name="previous">Previous</string>
     <string name="play">Play</string>
     <string name="next">Next</string>
-    <string name="no_track">No track</string>
+    <string name="no_music">No music in this folder.</string>
+    <string name="no_track">No media.</string>
+    <string name="error_generic">An error occurred.</string>
 </resources>
