--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_player">Player</string>
     <string name="title_settings">Settings</string>
+    <string name="title_endpoints">Endpoints</string>
     <string name="title_add_endpoint">Add endpoint</string>
     <string name="title_edit_endpoint">Edit endpoint</string>
     <string name="add">Add</string>
@@ -22,4 +23,8 @@
     <string name="no_music">No music in this folder.</string>
     <string name="no_track">No media.</string>
     <string name="error_generic">An error occurred.</string>
+    <string name="error_loading_music">Failed to load music.</string>
+    <string name="playback_device">Play music on</string>
+    <string name="music_source">Music source</string>
+    <string name="manage_endpoints">Manage endpoints</string>
 </resources>
