--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,10 @@
     <string name="title_endpoints">Endpoints</string>
     <string name="title_add_endpoint">Add endpoint</string>
     <string name="title_edit_endpoint">Edit endpoint</string>
+    <string name="title_playlist">Playlist</string>
     <string name="add">Add</string>
     <string name="settings">Settings</string>
+    <string name="playlist">Playlist</string>
     <string name="cloud_id">Cloud ID</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -28,6 +30,8 @@
     <string name="music_source">Music source</string>
     <string name="manage_endpoints">Manage endpoints</string>
     <string name="add_to_playlist">Add to playlist</string>
+    <string name="remove_from_playlist">Remove from playlist</string>
     <string name="more">More</string>
     <string name="cover">Cover</string>
+    <string name="playlist_empty">Empty playlist.</string>
 </resources>
