--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,18 @@
     <string name="title_music">Music</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_player">Player</string>
+    <string name="title_playlists">Playlists</string>
     <string name="title_settings">Settings</string>
     <string name="title_endpoints">Endpoints</string>
     <string name="title_add_endpoint">Add endpoint</string>
     <string name="title_edit_endpoint">Edit endpoint</string>
     <string name="title_playlist">Playlist</string>
+    <string name="title_popular">Popular</string>
+    <string name="title_recent">Recent</string>
     <string name="add">Add</string>
     <string name="settings">Settings</string>
     <string name="playlist">Playlist</string>
+    <string name="playlists">Playlists</string>
     <string name="cloud_id">Cloud ID</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -25,6 +29,7 @@
     <string name="next">Next</string>
     <string name="no_music">No music in this folder.</string>
     <string name="no_track">No media.</string>
+    <string name="no_tracks">No tracks.</string>
     <string name="error_generic">An error occurred.</string>
     <string name="error_loading_music">Failed to load music.</string>
     <string name="playback_device">Play music on</string>
