Try to debug socket timeout crash; display version in app; up deps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="notification_channel_description">Shows what music is currently playing in MusicPimp</string>
 
     <string name="popular_plays">%1$d plays</string>
+    <string name="version">Version %1$s</string>
 </resources>
