--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_playlists">Playlists</string>
     <string name="title_settings">Settings</string>
     <string name="title_endpoints">Endpoints</string>
+    <string name="title_privacy">Privacy policy</string>
     <string name="title_add_endpoint">Add endpoint</string>
     <string name="title_edit_endpoint">Edit endpoint</string>
     <string name="title_playlist">Playlist</string>
@@ -35,6 +36,7 @@
     <string name="playback_device">Play music on</string>
     <string name="music_source">Music source</string>
     <string name="manage_endpoints">Manage endpoints</string>
+    <string name="privacy_policy">Privacy policy</string>
     <string name="add_to_playlist">Add to playlist</string>
     <string name="start_playback_here">Start playback here</string>
     <string name="remove_from_playlist">Remove from playlist</string>
